--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,56 @@
+body {
+  text-align: center;
+  background-color: #f7f5f1;
+  color: #444444;
+  font-family: 'Noto Sans Balinese', sans-serif;
+}
+
+section {
+  margin-bottom: 50px;
+}
 h1 {
-  color: salmon;
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+h3 {
+  font-weight: 400;
+  margin-top: 8px;
+}
+
+img {
+  width: 400px;
+  height: 450px;
+}
+
+button {
+  width: 400px;
+  height: 50px;
+  margin-top: 40px;
+  background-color: white;
+  border: 1px solid #444444;
+  font-size: 20px;
+}
+
+.text {
+  margin-bottom: 50px;
+}
+
+.images-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.container {
+  position: relative;
+}
+
+.label {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 175px;  
+  color: white;
 }
